replace new Integer(1), deprecated since Java 9
use Integer.valueOf(1) instead

Change-Id: I44f68f0545cc81e3836559c8505f533c20793286